fix: spinner not showing

--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -8,6 +8,7 @@
 }
 
 .book-table {
+  position: relative;
   margin: auto;
   border: 1px solid black;
   border-collapse: collapse;
